--- a/T3.md
+++ b/T3.md
@@ -164,6 +164,8 @@ Kuulisin kuitenkin mieluusti oikean vastauksen!
 Näistä asioista tuli aiemmin viikolla vastaan jo ihan todellisen maailman esimerkkikin, kun olin menossa päivittämään ruokatilaustani s-kaupat.fi sivustolle ja huomasin sivun latauduttua, että URLin perään ilmestyi jotain sinne selkeästi täysin kuulumatonta. Koitin toistaa asiaa eri käyttöjärjestelmillä ja selaimilla ja kaikilla sama juttu. Soitin heidän aspaansa että nyt vaikuttaisi olevan sivusto hyökkäyksen alaisena ja että kannattaisi ylläpidosta tai tietoturvasta vastaavia kavereita pyytää vilkaisemaan välittömästi, että mitä siellä oikein tapahtuu ja aspa lupasikin näin tehdä. Injektio oli kuitenkin paikallaan vielä seuraavanakin päivänä, joten ihmettelin asiaa muutamalle alalla työskentelevälle tutulle, jotka olivat sitten yhteydessä mm. Kyberturvallisuuskeskukseen ja myöhemmin injektio poistuikin. Illemmalla pyöri vielä tornaria että tapauksesta olisi jokin bug bountykin, mutta ei ainakaan mitään kovin julkista sellaista. Ilmeisesti eivät itsekään oikein tiedä, miten tuossa on onnistuttu.
 Oli kuitenkin siistiä päästä heti tavallaan hyödyntämään tämänkin kurssin oppeja, vaikka luultavasti kyseinen URL olisi herättäny huomiota muutenkin. Laitan kuvakaappauksen injektiosta mukaan GitHubin versioon, jos kiinnostaa nähdä. Googlailun perusteella vaikutti olevan kyse Rubyn Popenista, juuri sopivasti kun tällä viikolla `Popen()` tuli vastaan näissäkin tehtävissä. :D
 
+![s-kaupat.fi](S-kauppa.png)
+
 Ja loppuun vielä käyttämiäni lähteitä:
 
  - https://www.php.net/manual/en/function.shell-exec.php
