--- a/T6.md
+++ b/T6.md
@@ -71,6 +71,8 @@ Joskus nuorempana tuli pelailtua jonkun verran World of Warcraftia, jossa on kai
 
 Toinen esimerkki voisi puolestaan olla vaikka jokin verkkopalvelu, jossa kokonaisluvun ylivuoto kaataisi mahdollisesti koko palvelun ja näin ollen hyökkääjä pystyisi haavoittuvuutta hyväksikäyttämällä suorittamaan palvelunestohyökkäyksen. Javan Spring-sovelluksia pyörii tuotannossa vielä tänäkin päivänä erittäin huimia määriä, joten tällainenkin skenaario lienee erittäin mahdollinen. Kaipa tällainen olisi mahdollista myös oikein huonosti toteutetulla PHP-sovelluksellakin, joka kaatuisi vaikkapa mikäli kokonaisluku muuttuisikin liukuluvuksi, tai jotain.
 
+**Edit:** Unohdin, että tähänkin tehtävään (4) olisi täytynyt olla lähdekoodiesimerkki, kun jätin tehtävän mietintämyssyyn matkan ajaksi äitienpäivää viettämään. Tähän kellonaikaan sellaista ei enää valitettavasti synny, joten siitä joutuu ottamaan miinuspisteet vastaan.
+
 Lopuksi käyttämiäni lähteitä:
 
  - https://mortada.net/can-integer-operations-overflow-in-python.html
